--- a/banking-api/src/test/resources/application.properties
+++ b/banking-api/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/cubic300_bank?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/cubic_bank?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = shrums
 
